feat: fixed dependencies and user to work with login